# subnet-22

./: .gitignore  README.md  example.py  pyproject.toml  pytest.ini  requirements.txt  run.sh  setup.py
.mc_preflight/: O-80-branch-safety-preflight.md
datura/: __init__.py  misc.py  protocol.py  stream.py  synapse.py  utils.py
datura/bittensor/: dendrite.py  metagraph.py  subtensor.py  wallet.py
datura/dataset/: dataset.py
datura/redis/: redis_client.py  utils.py
datura/services/: twitter_utils.py
datura/tools/: base.py  tool_manager.py
desearch/: __init__.py  miner_config.py  protocol.py  utils.py
desearch/bittensor/: dendrite.py  metagraph.py  wallet.py
desearch/dataset/: dataset.py  dataset_test.py  hf_dataset.py  test_hf_dataset.py
desearch/redis/: utils.py
desearch/tools/: base.py  (+4 more)
docs/: api.md  env_variables.md  running_a_miner.md  running_a_validator.md  running_on_mainnet.md  running_on_testnet.md
tests/: test_import_contract.py  test_worker_api_auth.py  test_worker_auth.py
utility-api/: .env.example  Dockerfile  README.md  pyproject.toml
utility-api/app/: auth.py  config.py  main.py
utility-api/app/db/: session.py
utility-api/app/domains/dataset/: enums.py  epoch_cache.py  question_cache.py  router.py  schemas.py
utility-api/app/domains/dataset/models/: question.py
utility-api/app/domains/logs/: enums.py  router.py  schemas.py
utility-api/app/domains/logs/models/: miner_response_log.py
utility-api/app/domains/miners/: client.py  router.py  schemas.py
utility-api/tests/: test_logs_router.py  test_miners_shapes.py
(+235 files in other folders)
