[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "desearch"
description = "Decentralized AI Search"
requires-python = ">=3.10"
authors = [{ name = "Desearch AI" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development",
]
dynamic = ["version", "readme", "dependencies", "license"]

[project.urls]
Homepage = "https://github.com/Desearch-ai/subnet-22"

[tool.setuptools.dynamic]
version = { attr = "desearch.__version__" }
readme = { file = ["README.md"], content-type = "text/markdown" }
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
where = ["."]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "fastapi>=0.110",
    "httpx>=0.27",
]
